# pyratemaking

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  test.yml
docs/: index.md  quickstart.md
docs/guide/: classification.md  development.md  implementation.md  indication.md  large-loss.md  onleveling.md  trending.md
docs/reference/: glm.md  modules.md  rateplan.md
examples/: french_motor_end_to_end.ipynb
src/pyratemaking/: __init__.py  core.py
src/pyratemaking/core/: __init__.py  classification.py  implementation.py  indication.py  plan.py
src/pyratemaking/datasets/: __init__.py  _cache.py  french_motor.py  synthetic.py
src/pyratemaking/development/: __init__.py  _burncost_bridge.py  ldf.py  tail.py
src/pyratemaking/diagnostics/: __init__.py  ae.py  calibration.py  gains.py  lift.py  pdp.py  residuals.py
src/pyratemaking/glm/: __init__.py  backend.py  constrained.py  families.py  frequency_severity.py  gam.py  penalized.py  stepwise.py  tweedie.py
src/pyratemaking/io/: __init__.py  claims.py  policies.py
src/pyratemaking/large_loss/: __init__.py  basic_limits.py  increased_limits.py  layer_pricing.py
src/pyratemaking/onleveling/: __init__.py  extension_exposures.py  parallelogram.py
src/pyratemaking/relativities/: __init__.py  credibility.py  multi_way.py  one_way.py  smoothing.py
src/pyratemaking/reporting/: __init__.py  excel.py  filing.py  tables.py
src/pyratemaking/reporting/templates/: filing.html.j2
src/pyratemaking/trending/: __init__.py  core.py  frequency.py  pure_premium.py  severity.py
tests/: test_smoke.py
tests/core/: test_classification.py  test_implementation.py  test_indication.py  test_plan.py
tests/datasets/: test_synthetic.py
tests/development/: test_ldf.py  test_tail.py
tests/diagnostics/: test_diagnostics.py
tests/glm/: conftest.py  test_backend.py  test_frequency_severity.py  test_penalized_stepwise_constrained.py  test_tweedie.py
tests/integration/: test_ecosystem_bridges.py  test_french_motor_pipeline.py  test_synthetic_pipeline.py
tests/io/: test_claims.py  test_policies.py
tests/large_loss/: test_large_loss.py
tests/onleveling/: test_extension_exposures.py  test_parallelogram.py
tests/relativities/: test_relativities.py
tests/reporting/: test_reporting.py
tests/trending/: test_core.py  test_severity_frequency_pp.py
