[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyratemaking"
version = "0.1.0"
description = "Pure-Python ratemaking for P&C insurance — end to end."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Isaac López", email = "jisaaclopg@gmail.com" },
]
keywords = [
    "actuarial",
    "ratemaking",
    "insurance",
    "glm",
    "pricing",
    "p&c",
    "werner-modlin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "glum>=3.0",
    "statsmodels>=0.14",
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
smoothing      = ["whsmooth>=0.1"]
credibility    = ["actuarcredibility>=0.1"]
distributions  = ["actudist>=0.1"]
burncost       = ["burncost>=0.1"]
gam            = ["pygam>=0.9"]
full           = [
    "whsmooth>=0.1",
    "actuarcredibility>=0.1",
    "actudist>=0.1",
    "burncost>=0.1",
    "pygam>=0.9",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "hypothesis>=6.90",
    "ruff>=0.1.6",
    "mypy>=1.7",
    "pre-commit>=3.5",
]
docs = [
    "mkdocs-material>=9.4",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

[project.urls]
Homepage      = "https://github.com/CosmikArt/pyratemaking"
Documentation = "https://cosmikart.github.io/pyratemaking"
Repository    = "https://github.com/CosmikArt/pyratemaking"
Issues        = "https://github.com/CosmikArt/pyratemaking/issues"
Changelog     = "https://github.com/CosmikArt/pyratemaking/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pyratemaking"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyratemaking",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length    = 100
extend-exclude = ["docs/site"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line length handled by formatter
    "N803",  # allow capitalised math symbols
    "N806",  # allow capitalised local vars (X, Y)
    "B008",  # function call in default arg (used by np.array defaults occasionally)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
docstring-code-format    = false

[tool.mypy]
python_version          = "3.10"
warn_unused_configs     = true
warn_redundant_casts    = true
warn_unused_ignores     = true
no_implicit_optional    = true
check_untyped_defs      = true
ignore_missing_imports  = true

[[tool.mypy.overrides]]
module                  = "pyratemaking.core.*"
strict                  = true
disallow_untyped_defs   = true

[[tool.mypy.overrides]]
module                  = "pyratemaking.glm.*"
strict                  = true
disallow_untyped_defs   = true

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning:statsmodels.*",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "network: requires network access",
    "optional: requires optional ecosystem dependency",
]

[tool.coverage.run]
branch = true
source = ["src/pyratemaking"]
omit = [
    "*/tests/*",
    "*/_version.py",
    "*/datasets/_cache.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
precision   = 1
show_missing = true
